[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:may indicate binary incompatibility:RuntimeWarning',
]

## For debugging purposes, enable printing of logging calls

# log_cli = true
# log_cli_level = "DEBUG"
