[metadata]
name = pysm3
description = Python Sky Model for Microwave and Submm experiments
author = Ben Thorne, David Alonso, Sigurd Naess, Jo Dunkley, Andrea Zonca
author_email =
url = https://github.com/healpy/pysm
edit_on_github = True
github_project = healpy/pysm
version = 3.2.1.dev
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    healpy
    numba
    toml
    importlib_resources;python_version<"3.7"

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    sphinx-astropy
    ipykernel
    sphinx-math-dollar
    Pygments

[options.package_data]
pysm = data/*

[tool:pytest]
testpaths = "pysm" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pysm/_astropy_init*
    pysm/conftest.py
    pysm/*setup_package*
    pysm/tests/*
    pysm/*/tests/*
    pysm/extern/*
    pysm/version*
    */pysm/_astropy_init*
    */pysm/conftest.py
    */pysm/*setup_package*
    */pysm/tests/*
    */pysm/*/tests/*
    */pysm/extern/*
    */pysm/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
