[metadata]
name = pysm3
author = Andrea Zonca
author_email = code@andreazonca.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://pysm3.readthedocs.io/
description = "PySM generates full-sky simulations of Galactic emissions in intensity and polarization"
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = galsci/pysm

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    healpy >= 1.16.0
    numba
    toml
    astropy
    importlib_metadata;python_version<'3.8'

[options.extras_require]
test =
    pytest-astropy
    pytest
    psutil
    tox
    pixell == 0.17.3
mpi =
    mpi4py
docs =
    sphinx-astropy
    nbsphinx
    sphinx-math-dollar
    pandoc
    ipykernel

[options.package_data]
pysm3 = data/*

[tool:pytest]
testpaths = "pysm3" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst

[coverage:run]
omit =
    pysm3/_astropy_init*
    pysm3/conftest.py
    pysm3/*setup_package*
    pysm3/tests/*
    pysm3/*/tests/*
    pysm3/extern/*
    pysm3/version*
    */pysm3/_astropy_init*
    */pysm3/conftest.py
    */pysm3/*setup_package*
    */pysm3/tests/*
    */pysm3/*/tests/*
    */pysm3/extern/*
    */pysm3/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
